tests/linear/linear-non-001/expected
# Example Non-Linearly Wired Circuits
Wire  has an unused entry.
## Circuits
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/linear-non/MissingInputs.sv:6:0-0: Linearity Error:
ab := [USED, USED, FREE]

```
## Verilator
```
%Warning-UNUSED: ../../shared/linear-non/MissingInputs.sv:2: Bits of signal are not used: 'ab'[2]
                                                           : ... In instance MissingInputs
              , input  logic[2:0] ab
                                  ^~
                 ... Use "/* verilator lint_off UNUSED */" and lint_on around source to disable this message.
%Error: Exiting due to 1 warning(s)
```
